regular -> recursive transation, loading spinner

--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -77,6 +77,10 @@ h5 {
   border-radius: 16px; */
 }
 
+.loading-spinner {
+  min-height: 50dvh;
+}
+
 #applicationMenubar {
   position: sticky;
   top: 0;
