delete server static, update github actions yaml

--- a/client/project/src/app/component/add-transaction/add-transaction.component.html
+++ b/client/project/src/app/component/add-transaction/add-transaction.component.html
@@ -112,7 +112,7 @@
         <div class="d-flex justify-content-between m-4">
           <div class="d-flex justify-content-center align-items-center">
             <span class="me-2">
-              <label for="regular"><Strong>Recursive</Strong></label>
+              <label for="regular"><Strong>Recurring</Strong></label>
             </span>
             <p-inputSwitch
               id="regular"
