--- a/client/project/src/app/component/regular-transactions/regular-transactions.component.html
+++ b/client/project/src/app/component/regular-transactions/regular-transactions.component.html
@@ -6,7 +6,7 @@
   ></p-breadcrumb>
   <div class="row justify-content-center align-items-center">
     <div class="col-8 text-center my-3 h1card">
-      <h1>Recursive Transactions</h1>
+      <h1>Recurring Transactions</h1>
     </div>
   </div>
 
