dashboard minor adjustment

--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
             <div class="d-flex flex-row-reverse mb-2">
               <p-button
                 (click)="showDialog()"
-                icon="pi pi-chart-line"
+                icon="pi pi-send"
                 label="Set Goal"
                 styleClass="p-button-rounded"
                 pTooltip="Set your goal here"
@@ -404,7 +404,7 @@
 
   <section>
     <form [formGroup]="goalForm">
-      <label for="yearInput" class="fs-4">Enter your yearly goal: </label>
+      <label for="yearInput" class="fs-4">Enter your goal: </label>
       <input
         class="ms-2 fs-4"
         type="number"
