SSE Spring Web MVC

--- a/client/project/src/app/component/real-time-price/real-time-price.component.html
+++ b/client/project/src/app/component/real-time-price/real-time-price.component.html
@@ -30,7 +30,7 @@
               type="submit"
               label="Get"
               icon="pi pi-search"
-              (click)="getPrice()"
+              (click)="getPriceSseEmitter()"
               [disabled]="form.invalid"
             ></button>
           </span>
